--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
