--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>spring-data-commons</artifactId>
             <version>3.1.5</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
