--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=always
 
 #spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/fitnessapp_db
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=fitnessuser
-spring.datasource.password=fitnessuser
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.sql.init.schema-locations=classpath:/schema.sql
-logging.level.org.springframework.jdbc=debug
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+#spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/fitnessapp_db
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=fitnessuser
+#spring.datasource.password=fitnessuser
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.sql.init.schema-locations=classpath:/schema.sql
+#logging.level.org.springframework.jdbc=debug
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
