--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 
 spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
