--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/package.json
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,6 +37,10 @@
     ]
   },
   "options": {
-    "allowedHosts": ["localhost", ".localhost"],
-    "proxy": "http://localhost:8080/"}
+    "allowedHosts": [
+      "localhost",
+      ".localhost"
+    ],
+    "proxy": "http://localhost:8080/"
+  }
 }
