--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.password=fitnessuser
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.sql.init.schema-locations=classpath:/schema.sql
-logging.level.org.springframework.jdbc=debug
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+#logging.level.org.springframework.jdbc=debug
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
